# pyfileapi

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-app.yml  python-publish.yml
pyfileapi/: _main.py  find_match_helpers.py  handlers.py  search.py
pyfileapi/utils/: find_match_helpers.py
tests/: handlers_test.py
