[metadata]
name = pyfileapi
version = 0.0.3
description = A wrapper around the stdlib file functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thenextbigthingthisdecade/pyfile
author = Prakhar Nagpal
author_email = thenextbigthingthisdecade@gmail.com
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    pyfile = pyfileapi._main:main

[options.extras_require]
test =
    pytest

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
